# wagtail-treemodeladmin

./: .gitattributes  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
treemodeladmin/: __init__.py  apps.py  helpers.py  options.py  views.py
treemodeladmin/static/treemodeladmin/css/: index.css
treemodeladmin/templates/treemodeladmin/: index.html
treemodeladmin/templates/treemodeladmin/includes/: breadcrumb.html  header.html  tree_result_list.html  tree_result_row.html
treemodeladmin/templatetags/: treemodeladmin_tags.py
treemodeladmin/tests/: settings.py  test_options.py  test_views.py  urls.py
treemodeladmin/tests/treemodeladmintest/: apps.py  models.py  wagtail_hooks.py
treemodeladmin/tests/treemodeladmintest/fixtures/: treemodeladmin_test.json
treemodeladmin/tests/treemodeladmintest/migrations/: 0001_initial.py
